force-app/main/objects/Opportunity.object
<CustomObject>
    <fields>
        <fullName>Sales_Price_in_USD__c</fullName>
        <description>Used in Account Plan to show USD vaue on contract details.</description>
        <formula>IF(
TEXT(CurrencyIsoCode) = &apos;USD&apos;, Amount,
Amount / CURRENCYRATE(TEXT(CurrencyIsoCode))*CURRENCYRATE(&apos;USD&apos;))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sales Price in USD</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Services_Discount__c</fullName>
        <label>Contract Service Discount</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>SkipValidationLeadConversion__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SkipValidationLeadConversion</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Client_Needs_Validation__c</fullName>
        <defaultValue>true</defaultValue>
        <description>This is for escaping the Validation Rule for Hiring Need, Package Level, Talent Level. During Creation this will be checked for Ignite Opportunity, after the products added this will be marked as false.</description>
        <label>Skip Client Needs Validation?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Validation_Auto_Renewal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Checkbox for skipping validations while creating Auto Renewal Opportunities</description>
        <label>Skip Validation Auto Renewal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Skip_Validation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field has been created to skip the validation &apos;PriceBookentry_Required_OppMakingContact&apos; while Deleting the OpporunityLineItems in the class &quot;CurrencyChangeOpportunity&quot;.</description>
        <label>Skip Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartSheetField__c</fullName>
        <description>This field is used to store comma seprated list of PS Products related to an opportunity. This is field is being used to send information to Smartsheet.</description>
        <label>Smartsheet Product ID</label>
        <length>4000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Standard_Contract_Duration__c</fullName>
        <inlineHelpText>Defines the standard duration of the contract</inlineHelpText>
        <label>Standard Contract Duration (In Months)</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>12</fullName>
                </value>
                <value>
                    <fullName>24</fullName>
                </value>
                <value>
                    <fullName>36</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Strategy_and_Goals__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Strategy and Goals</label>
        <referenceTo>Strategy_and_Goal__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>TM_Phase__c</fullName>
        <description>This field is used to replace the existing proposition field.</description>
        <inlineHelpText>Select the Client Interest that best defines the scope of the client’s project, or Combined if the project is mixed.</inlineHelpText>
        <label>Client Interest</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Talent Acquisition</fullName>
                </value>
                <value>
                    <fullName>Talent Management</fullName>
                </value>
                <value>
                    <fullName>TAandTMCombined</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Talent_Level__c</fullName>
        <description>This field is created as a part of Nomenclature(SSE--113)</description>
        <inlineHelpText>Select the level(s) of employee that best defines the scope of the client’s project.</inlineHelpText>
        <label>Talent Level</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Vocational</fullName>
                </value>
                <value>
                    <fullName>Entry Level / Associate</fullName>
                </value>
                <value>
                    <fullName>Graduate and Intern</fullName>
                </value>
                <value>
                    <fullName>Professional / Individual Contributor</fullName>
                </value>
                <value>
                    <fullName>Supervisor</fullName>
                </value>
                <value>
                    <fullName>Manager</fullName>
                </value>
                <value>
                    <fullName>Individual Contributor Leader</fullName>
                </value>
                <value>
                    <fullName>Senior leadership</fullName>
                </value>
                <value>
                    <fullName>All Levels</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Talent_Segment__c</fullName>
        <description>This is new field, created as a part of nomenclature change(SSE--113)</description>
        <inlineHelpText>Select the overall talent segment or population that the client is focused on.</inlineHelpText>
        <label>Talent Segment</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Graduate / Apprentice</fullName>
                </value>
                <value>
                    <fullName>High Potential</fullName>
                </value>
                <value>
                    <fullName>Functional / Professional</fullName>
                </value>
                <value>
                    <fullName>Manager / Leader</fullName>
                </value>
                <value>
                    <fullName>Volume</fullName>
                </value>
                <value>
                    <fullName>Other / Unknown</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Target_Program__c</fullName>
        <inlineHelpText>This field is to track our 2025 target programs. Please select the appropriate program(s) appropriate for this opportunity</inlineHelpText>
        <label>Target Program</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>2025 - Smart Interview Professional</fullName>
                </value>
                <value>
                    <fullName>2025 - Talent Mobility</fullName>
                </value>
                <value>
                    <fullName>2025 - BPO</fullName>
                </value>
                <value>
                    <fullName>2025 - Competitor Displacement</fullName>
                </value>
                <value>
                    <fullName>Not in a target program</fullName>
                </value>
                <value>
                    <fullName>AMS: 360</fullName>
                    <isActive>false</isActive>
                    <label>AMS: 360</label>
                </value>
                <value>
                    <fullName>AMS: BPO</fullName>
                    <isActive>false</isActive>
                    <label>AMS: BPO</label>
                </value>
                <value>
                    <fullName>AMS: Energy &amp; Utilities</fullName>
                    <isActive>false</isActive>
                    <label>AMS: Energy &amp; Utilities</label>
                </value>
                <value>
                    <fullName>AMS: Finance and Insurance</fullName>
                    <isActive>false</isActive>
                    <label>AMS: Finance and Insurance</label>
                </value>
                <value>
                    <fullName>AMS: Fuel50</fullName>
                    <isActive>false</isActive>
                    <label>AMS: Fuel50</label>
                </value>
                <value>
                    <fullName>AMS: Gloat</fullName>
                    <isActive>false</isActive>
                    <label>AMS: Gloat</label>
                </value>
                <value>
                    <fullName>AMS: Harver</fullName>
                    <isActive>false</isActive>
                    <label>AMS: Harver</label>
                </value>
                <value>
                    <fullName>AMS: Hogan</fullName>
                    <isActive>false</isActive>
                    <label>AMS: Hogan</label>
                </value>
                <value>
                    <fullName>AMS: Modern Hire</fullName>
                    <isActive>false</isActive>
                    <label>AMS: Modern Hire</label>
                </value>
                <value>
                    <fullName>AMS: SVAR</fullName>
                    <isActive>false</isActive>
                    <label>AMS: SVAR</label>
                </value>
                <value>
                    <fullName>ESA: Competitor Displacement - AON</fullName>
                    <isActive>false</isActive>
                    <label>ESA: Competitor Displacement - AON</label>
                </value>
                <value>
                    <fullName>ESA: Competitor Displacement - Capp</fullName>
                    <isActive>false</isActive>
                    <label>ESA: Competitor Displacement - Capp</label>
                </value>
                <value>
                    <fullName>ESA: Competitor Displacement - KornFerry</fullName>
                    <isActive>false</isActive>
                    <label>ESA: Competitor Displacement - KornFerry</label>
                </value>
                <value>
                    <fullName>ESA: Competitor Displacement - Sova</fullName>
                    <isActive>false</isActive>
                    <label>ESA: Competitor Displacement - Sova</label>
                </value>
                <value>
                    <fullName>ESA: Upsell Essential to Advanced</fullName>
                    <isActive>false</isActive>
                    <label>ESA: Upsell Essential to Advanced</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Total_Extension_Length__c</fullName>
        <label>Total Extension Length</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Total_Product_Count__c</fullName>
        <description>Total number of products, for average discount calculation.</description>
        <label>Total Product Count</label>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Sales_Price__c</fullName>
        <inlineHelpText>This is Total Sales Price per unit.</inlineHelpText>
        <label>Total Sales Price</label>
        <summarizedField>OpportunityLineItem.UnitPrice</summarizedField>
        <summaryForeignKey>OpportunityLineItem.OpportunityId</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Total_Solution_Cap__c</fullName>
        <label>Total Solution Cap</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Transition_related__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Transition related?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Unconfirmed_Sun_Order_Number__c</fullName>
        <label>Unconfirmed Sun Order Number</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_2__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For Opp Owner to assign more than 1 sales person to the opportunity</description>
        <label>Pre-Sales Attributed to (2)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>For opportunity owners to assign a primary and secondary sales person to an opportunity</description>
        <label>Pre-Sales Attributed to (1)</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunity</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Variation_Opportunity__c</fullName>
        <label>Variation Opportunity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                    <default>true</default>
                    <label>No</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Variation_Reason__c</fullName>
        <label>Variation/ Extension Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Addition to order</fullName>
                </value>
                <value>
                    <fullName>Reduction of order</fullName>
                </value>
                <value>
                    <fullName>Adjustment to order</fullName>
                </value>
                <value>
                    <fullName>Change to legal terms &amp; conditions</fullName>
                </value>
                <value>
                    <fullName>Change to payment terms</fullName>
                </value>
                <value>
                    <fullName>Change to SoW</fullName>
                </value>
                <value>
                    <fullName>Co-Terminating Cross Sell</fullName>
                </value>
                <value>
                    <fullName>Correction</fullName>
                </value>
                <value>
                    <fullName>Debooking</fullName>
                </value>
                <value>
                    <fullName>Excess Usage</fullName>
                </value>
                <value>
                    <fullName>In Arrears</fullName>
                </value>
                <value>
                    <fullName>Price List / Standing Order</fullName>
                </value>
                <value>
                    <fullName>Paid Subscription Extension</fullName>
                </value>
                <value>
                    <fullName>Service Delay – No Charge</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Won_LossReason_Influencer__c</fullName>
        <description>Select One of the Options from the List that best explains   why the Opportunity was Won or Loss.</description>
        <inlineHelpText>Select One of the Options from the List that best explains why the Opportunity was Won or Loss.</inlineHelpText>
        <label>Won/Loss reason (Legacy)</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assessment Catalog</fullName>
                </value>
                <value>
                    <fullName>Assessment Methodology/Approach</fullName>
                </value>
                <value>
                    <fullName>Company Reputation/Experience</fullName>
                </value>
                <value>
                    <fullName>Company Size</fullName>
                </value>
                <value>
                    <fullName>Ease of Doing Business</fullName>
                </value>
                <value>
                    <fullName>Existing Relationship with Other Vendor</fullName>
                </value>
                <value>
                    <fullName>Integration</fullName>
                </value>
                <value>
                    <fullName>International Capabilities</fullName>
                </value>
                <value>
                    <fullName>Level of Service/Support</fullName>
                </value>
                <value>
                    <fullName>Market Messaging</fullName>
                </value>
                <value>
                    <fullName>PreVisor Pro Order</fullName>
                </value>
                <value>
                    <fullName>Price &amp; Terms</fullName>
                </value>
                <value>
                    <fullName>References</fullName>
                </value>
                <value>
                    <fullName>Reporting</fullName>
                </value>
                <value>
                    <fullName>Sales Team/Sales Process Execution</fullName>
                </value>
                <value>
                    <fullName>Technology Platform</fullName>
                </value>
                <value>
                    <fullName>Timing</fullName>
                </value>
                <value>
                    <fullName>Validation Evidence/ROI</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Unknown</fullName>
                </value>
                <value>
                    <fullName>Sim Player Issue</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Won_Loss_Explanation__c</fullName>
        <description>More details on why opportunity was won/loss</description>
        <inlineHelpText>Text field to give details about the Reason for Won/Loss</inlineHelpText>
        <label>Won/Loss Explanation (Legacy)</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>X60_Day_Check_for_Price_Uplift_Email__c</fullName>
        <formula>Renewal_Date__c - Today()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>60 Day Check for Price Uplift Email</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>last_Forecast_category_field_change__c</fullName>
        <label>last Forecast category field change</label>
        <type>Date</type>
    </fields>
</CustomObject>